# Todo_Console_App_Phase-V

./: $null  .env.example  .gitignore  AGENT_CONFIGURATION.md  AGENT_FIXES_SUMMARY.md  AGENT_FIX_COMPLETE.md  AGENT_FIX_FINAL.md  AGENT_FIX_SUMMARY.md  AGENT_TOOL_CALLING_FIX.md  AGENT_WORKING.md  AGENT_WORKING_FINAL.md  ALL_FIXES_COMPLETE.md  ARCHITECTURE_ANALYSIS.md  CHATBOT_FIX_FINAL.md  CHATBOT_TOOL_CALLING_FIX.md  CHAT_ENHANCEMENT_SUMMARY.md  CI_CD_DEPLOYMENT_FIX.md  CI_CD_SETUP_COMPLETE.md  CLAUDE.md  COLOR_THEME_ENHANCEMENT.md  DAPR_DOCKER_DEPLOYMENT.md  DAPR_NOTIFICATION_GUIDE.md  DAPR_SETUP_SUMMARY.md  DATABASE_SETUP.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DOCKER_BUILD_COMMANDS.md  DOCKER_BUILD_GUIDE.md  DOCKER_CICD_UPDATE.md  DOCKER_K8S_COMPLETE_GUIDE.md  DOCKER_NETWORKING.md  DOCKER_README.md  DOCKER_SETUP_COMPLETE.md  EMAIL_VALIDATION_SIGNUP_SUMMARY.md  EMAIL_VERIFICATION_GUIDE.md  FINAL_FIX.md  FINAL_FIX_ALL_ISSUES.md  FINAL_MODEL_FIX.md  FINAL_STATUS.md  FIXED_INTELLIGENT_PARSING.md  (+57 more)
backend/: .dockerignore  .env.example  .flake8  AGENT_USER_ID_FIX.md  ALL_FIXES_COMPLETE_FINAL.md  BACKEND_RUNNING.md  DEBUG_TOMORROW_ISSUE.md  Dockerfile  FINAL_AGENT_FIXES.md  NLP_PARSER_FIXES.md  README.md  RUN_SERVER.md  SETUP.md  TAG_ASSIGNMENT_AUTO_FIX.md  TAG_FIX_SUMMARY.md  create_user.py  debug_openapi.py  init_db.py  main.py  migrate_db.py  migrate_simple.py  pyproject.toml  requirements.txt
backend/agents_sdk/: connection.py  main.py  notification.py  pyproject.toml  todo_agent.py
backend/app/api/: auth_routes.py  chat_routes.py  dapr_notification_routes.py  (+8 more)
(+234 files in other folders)
